--- a/src/main/resources/assets/aec2/lang/en_US.lang
+++ b/src/main/resources/assets/aec2/lang/en_US.lang
@@ -1,4 +1,5 @@
 tile.aec2.still.name=Destillery
 tile.aec2.spectrometer.name=Aether Spectrometer
+tile.aec2.crucible.name=Reaction Crucible
 
 itemGroup.aetherCraft=AetherCraft
