Aded former stub

--- a/src/main/resources/assets/aec2/lang/en_US.lang
+++ b/src/main/resources/assets/aec2/lang/en_US.lang
@@ -1,5 +1,6 @@
 tile.aec2.still.name=Destillery
 tile.aec2.spectrometer.name=Aether Spectrometer
 tile.aec2.crucible.name=Reaction Crucible
+tile.aec2.former.name=Material Former
 
 itemGroup.aetherCraft=AetherCraft
